bugs fixwd in create/edit/show

--- a/project_student_enquiry_system/templates/courses/create.html
+++ b/project_student_enquiry_system/templates/courses/create.html
@@ -15,5 +15,5 @@ Course | CREATE
 
         <input type="submit" class="btn btn-sm btn-primary" value="Add Course">
     </form>
-</div>/
+</div>
 {% endblock %}
