--- a/project_student_enquiry_system/templates/courses/show.html
+++ b/project_student_enquiry_system/templates/courses/show.html
@@ -10,7 +10,7 @@ Course | SHOW
     <a href="{% url 'course-edit' course.id %}" class="btn btn-sm btn-primary mt-3 mb-2">Edit</a>
     <h1>Course Detail</h1>
     <hr>
-    <div class="card p-5 mt-3">
+    <div class="card p-5 mt-3" style="background-color: cyan">
         <div class="card-header">
             <h2>Name: {{ course.course_name }}</h2>
         </div>
