--- a/project_student_enquiry_system/templates/courses/index.html
+++ b/project_student_enquiry_system/templates/courses/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container" style="background-color: cyan">
     <a href="{% url 'course-create' %}" class="btn btn-primary btn-sm mt-3 mb-2">Add New Course</a>
     <h1>{{ body_title }}</h1>
     <hr>
