Alert Message Added

--- a/project_student_enquiry_system/templates/students/index.html
+++ b/project_student_enquiry_system/templates/students/index.html
@@ -9,6 +9,7 @@
     <a href="{% url 'student-create' %}" class="btn btn-primary btn-sm mt-3 mb-2">Add New Student</a>
     <h1>{{ body_title }}</h1>
     <hr>
+    {% include 'partials/_message.html' %}
     <table class="table table-hover">
         <thead>
             <tr>
