--- a/project_student_enquiry_system/templates/dashboard.html
+++ b/project_student_enquiry_system/templates/dashboard.html
@@ -7,23 +7,25 @@ SES | Dashboard
 {% block content %}
 <div class="container">
     <h1 class="mt-3">Dashboard</h1>
+    {% include 'partials/_message.html' %}
     <div class="card p-5 mt-3">
         <div class="row d-flex justify-content-between" style="background-color: black">
             <div class="col">
                 <div class="card p-5" style="background-color: blue">
                     <h4>Courses - <strong>7</strong></h4>
                     <hr>
-                    <a href="{% url 'course-index' %}"><button type="button" class="btn btn-outline-info">View Courses</button></a>
+                    <a href="{% url 'course-index' %}">View Courses</a>
                 </div>
             </div>
             <div class="col">
                 <div class="card p-5" style="background-color: blue">
                     <h4>Students - <strong>5</strong></h4>
                     <hr>
-                    <a href="{% url 'student-index' %}"><button type="button" class="btn btn-outline-info">View Students</button></a>
+                    <a href="{% url 'student-index' %}">View Students</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
+
