--- a/project_student_enquiry_system/templates/layouts/master.html
+++ b/project_student_enquiry_system/templates/layouts/master.html
@@ -48,7 +48,7 @@
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Logout</a></li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
               </ul>
             </li>
           </ul>
@@ -72,3 +72,4 @@
     {% endblock %}
   </body>
 </html>
+
