--- a/project_student_enquiry_system/templates/dashboard.html
+++ b/project_student_enquiry_system/templates/dashboard.html
@@ -4,22 +4,28 @@
 SES | Dashboard
 {% endblock %}
 
+{% load static %}
+
+{% block custom_css %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
     <h1 class="mt-3">Dashboard</h1>
     {% include 'partials/_message.html' %}
     <div class="card p-5 mt-3">
-        <div class="row d-flex justify-content-between" style="background-color: black">
+        <div class="row d-flex justify-content-between">
             <div class="col">
-                <div class="card p-5" style="background-color: blue">
-                    <h4>Courses - <strong>7</strong></h4>
+                <div class="card p-5">
+                    <h4>Courses - <strong>5</strong></h4>
                     <hr>
                     <a href="{% url 'course-index' %}">View Courses</a>
                 </div>
             </div>
             <div class="col">
-                <div class="card p-5" style="background-color: blue">
-                    <h4>Students - <strong>5</strong></h4>
+                <div class="card p-5">
+                    <h4>Students - <strong>15</strong></h4>
                     <hr>
                     <a href="{% url 'student-index' %}">View Students</a>
                 </div>
@@ -28,4 +34,3 @@ SES | Dashboard
     </div>
 </div>
 {% endblock %}
-
