--- a/project_student_enquiry_system/templates/courses/index.html
+++ b/project_student_enquiry_system/templates/courses/index.html
@@ -5,18 +5,20 @@
 {% endblock %}
 
 {% block content %}
-<div class="container" style="background-color: cyan">
+<div class="container">
     <a href="{% url 'course-create' %}" class="btn btn-primary btn-sm mt-3 mb-2">Add New Course</a>
     <h1>{{ body_title }}</h1>
     <hr>
+    
     {% include 'partials/_message.html' %}
+
     <table class="table table-hover">
         <thead>
             <tr>
                 <th>S.No</th>
                 <th>Course Name</th>
                 <th>Course Code</th>
-                <th colspan="3">Action</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -25,14 +27,16 @@
                 <td>{{ forloop.counter }}</td>
                 <td>{{ val.course_name }}</td>
                 <td>{{ val.course_code }}</td>
-                <td><a href="{% url 'course-show' val.id %}" 
-                    class="btn btn-primary btn-sm mt-3 mb-2">Show</a>
-                </td>
-                <td><a href="{% url 'course-edit' val.id %}" 
-                    class="btn btn-primary btn-sm mt-3 mb-2">Edit</a>
-                </td>
-                <td><a href="{% url 'course-delete' val.id %}" 
-                    class="btn btn-primary btn-sm mt-3 mb-2">Delete</a>
+                <td>
+                    <a href="{% url 'course-show' val.id %}" 
+                    class="btn btn-primary btn-sm mt-3 mb-2"><i class="fa-solid fa-eye"></i>
+                    </a>
+                    <a href="{% url 'course-edit' val.id %}" 
+                    class="btn btn-primary btn-sm mt-3 mb-2"><i class="fa-solid fa-pencil"></i>
+                    </a>
+                    <a href="{% url 'course-delete' val.id %}" 
+                    class="btn btn-primary btn-sm mt-3 mb-2"><i class="fa-solid fa-trash"></i>
+                    </a>
                 </td>
             </tr>
             {% endfor %}
