--- a/project_student_enquiry_system/templates/students/show.html
+++ b/project_student_enquiry_system/templates/students/show.html
@@ -10,16 +10,27 @@ Student | SHOW
     <a href="{% url 'student-edit' student.id %}" class="btn btn-sm btn-primary mt-3 mb-2">Edit</a>
     <h1>Student Detail</h1>
     <hr>
-    <div class="card p-5 mt-3" style="background-color: cyan">
+    <div class="row" style="background-color: cyan">
         <div class="card-header">
             <h2>Name: {{ student.first_name }} {{ student.middle_name }} {{ student.last_name }}</h2>
         </div>
-        <div class="card-body">
-            <h3>Email: {{ student.email }}</h3>
-            <h3>Contact: {{ student.contact }}</h3>
-            <h3>Address: {{ student.address }}</h3>
-            <h3>Current Degree: {{ student.current_degree }}</h3>
-            <h3>Course: {{ student.course.course_name }}</h3>
+        <div class="col-sm-6">
+            <div class="card-body">
+                <h3>Email: {{ student.email }}</h3>
+                <h3>Contact: {{ student.contact }}</h3>
+                <h3>Address: {{ student.address }}</h3>
+                <h3>Current Degree: {{ student.current_degree }}</h3>
+                <h3>Course: {{ student.course.course_name }}</h3>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="card" style="width: 18rem; height: 18rem;">
+              <div class="card-body">
+                <h5 class="card-title">Profile Image</h5>
+                <img src="{{ student.profile_img.url }}" class="card-img-top" alt="..." width=90, height=230>
+                
+              </div>
+            </div>
         </div>
     </div>
 </div>
